--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>react-rfds</title>
-    <link rel="stylesheet" href="static/css/2.0d19495f.chunk.css">
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/dataesr/react-rfds/master/favicon.ico">
+    <link rel="stylesheet" href="static/css/2.deb9070c.chunk.css">
   </head>
   <body>
     <div id="rsg-root"></div>
-    <script src="build/bundle.d27f85f7.js"></script>
-    <script src="build/2.9c033c2b.js"></script>
-    <script src="build/main.9f8f9394.js"></script>
+    <script src="build/bundle.483fa668.js"></script>
+    <script src="build/2.b608e2fc.js"></script>
+    <script src="build/main.274ee9a9.js"></script>
   </body>
 </html>
