--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>react-rfds</title>
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/dataesr/react-rfds/master/favicon.ico">
-    <link rel="stylesheet" href="static/css/2.deb9070c.chunk.css">
+    <title>@dataesr/react-dsfr</title>
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/dataesr/react-dsfr/master/favicon.ico">
+    <link rel="stylesheet" href="static/css/2.d62145a1.chunk.css">
   </head>
   <body>
     <div id="rsg-root"></div>
     <script src="build/bundle.483fa668.js"></script>
-    <script src="build/2.7627f1fc.js"></script>
-    <script src="build/main.ecba2e03.js"></script>
+    <script src="build/2.6684724c.js"></script>
+    <script src="build/main.eb9f9f3d.js"></script>
   </body>
 </html>
