--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>@dataesr/react-dsfr</title>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/dataesr/react-dsfr/master/favicon.ico">
-    <link rel="stylesheet" href="static/css/2.0a8de462.chunk.css">
+    <link rel="stylesheet" href="static/css/2.9f7b069f.chunk.css">
+    <link rel="stylesheet" href="static/css/main.05b4219c.chunk.css">
   </head>
   <body>
     <div id="rsg-root"></div>
     <script src="build/bundle.483fa668.js"></script>
-    <script src="build/2.490ef2fb.js"></script>
-    <script src="build/main.54e7e8e9.js"></script>
+    <script src="build/2.daaa54fc.js"></script>
+    <script src="build/main.cecad9e3.js"></script>
   </body>
 </html>
