--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>@dataesr/react-dsfr</title>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/dataesr/react-dsfr/master/favicon.ico">
-    <link rel="stylesheet" href="static/css/main.56851c43.chunk.css">
+    <link rel="stylesheet" href="static/css/2.65db9395.chunk.css">
+    <link rel="stylesheet" href="static/css/main.3bf33101.chunk.css">
   </head>
   <body>
     <div id="rsg-root"></div>
     <script src="build/bundle.3527ec54.js"></script>
-    <script src="build/2.a508c3ac.js"></script>
-    <script src="build/main.7bfda73a.js"></script>
+    <script src="build/2.b6dd331d.js"></script>
+    <script src="build/main.cb9fa3a2.js"></script>
   </body>
 </html>
